--- a/public/assets/css/base/_b-text.less
+++ b/public/assets/css/base/_b-text.less
@@ -8,6 +8,9 @@
 .left {
     text-align: left;
 }
+.center {
+    text-align: center;
+}
 
 /* font-size */
 
@@ -29,4 +32,12 @@
 
 .bold{
     font-weight: 700;
+}
+
+.highlight{
+    color: @primaryColor;
+}
+
+.small{
+    font-size: 10px;
 }
