--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -122,7 +122,7 @@ th {
 }
 .card {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  background: rgba(255, 255, 255, 0.9);
+  background: #fdfdfd;
   border-radius: 2px;
 }
 .card .title {
@@ -134,13 +134,46 @@ th {
   height: 50px;
   border-bottom: 1px solid #bdbdbd;
 }
-/* Input form */
+/* Input Stuff */
+/*Secondary button */
+.button--secondary {
+  background: #8bc34a;
+  font-weight: normal;
+}
+.modal {
+  background: white;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  background: #fdfdfd;
+  border-radius: 2px;
+  position: fixed;
+  width: 50%;
+  height: 75%;
+  top: 400px;
+  left: 50%;
+  margin: -25% 0 0 -25%;
+  overflow-y: scroll;
+  z-index: 10;
+}
+.modal .title {
+  font-size: 20px;
+}
+.black-out {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.75);
+  position: fixed;
+  top: 0;
+  left: 0;
+}
 /* alignment */
 .right {
   text-align: right;
 }
 .left {
   text-align: left;
+}
+.center {
+  text-align: center;
 }
 /* font-size */
 .font-size-default {
@@ -158,6 +191,12 @@ th {
 }
 .bold {
   font-weight: 700;
+}
+.highlight {
+  color: #8bc34a;
+}
+.small {
+  font-size: 10px;
 }
 /*
 |--------------------------------------------------------------------------
@@ -2423,7 +2462,7 @@ th {
 }
 .events-table {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  background: rgba(255, 255, 255, 0.9);
+  background: #fdfdfd;
   border-radius: 2px;
   padding: 0;
 }
@@ -2539,7 +2578,7 @@ th {
 /* Gecko Card (List) */
 .gecko-card {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  background: rgba(255, 255, 255, 0.9);
+  background: #fdfdfd;
   border-radius: 2px;
   margin: 20px auto;
   line-height: 14px;
@@ -2565,7 +2604,7 @@ th {
 /* Gecko Detail */
 .gecko-detail-card {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  background: rgba(255, 255, 255, 0.9);
+  background: #fdfdfd;
   border-radius: 2px;
   padding: 10px;
   line-height: 50px;
@@ -2600,12 +2639,16 @@ th {
 }
 .add-gecko-form {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  background: rgba(255, 255, 255, 0.9);
+  background: #fdfdfd;
   border-radius: 2px;
   padding: 10px;
 }
 .add-gecko-form .title {
   font-size: 20px;
+}
+.form-feedback {
+  color: #536dfe;
+  border-top: solid 1px #bdbdbd;
 }
 .header {
   background: #689f38;
