--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -2,6 +2,7 @@
 @import "base/_b-base.less";
 @import "base/_b-colors.less";
 @import "base/_b-elements.less";
+@import "base/_b-modals.less";
 @import "base/_b-text.less";
 
 @import "layout/_l-grid.less";
