--- a/public/assets/css/modules/_gecko.less
+++ b/public/assets/css/modules/_gecko.less
@@ -56,15 +56,15 @@
     height: 50px;
     border-radius: 50%;
     vertical-align: middle;
-    margin: 5px;
+    margin-bottom: 5px;
     &:hover {
-        border: solid 3px @accentColor;
+        border: solid 3px @primaryColor;
     }
 }
 
 /* Add New Gecko Form */
 
-#form label {
+.add-gecko-form label, .gecko-detail-card label {
     color: @textColorGray;
     .bold;
     font-size: 14px;
