--- a/public/components/EventsTable/EventsTableTemplate.htm
+++ b/public/components/EventsTable/EventsTableTemplate.htm
@@ -1,4 +1,5 @@
 <div class='events-table material-card'>
+    <!-- FIXME: Fix event table layout -->
 	<div class='title'>Events</div>
     <table>
         <tr>
