--- a/public/components/GeckoDetail/GeckoDetailTemplate.htm
+++ b/public/components/GeckoDetail/GeckoDetailTemplate.htm
@@ -1,77 +1,61 @@
 <!-- CONTAINER FOR GECKO DETAILED INFORMATION -->
 <div class='gecko-detail'>
-    <div class='content'>
-        <div class="gecko-detail-card grid">
+    <div class="gecko-detail-card">
+        <div class='table-top grid'>
             <div class="title col-2-3">
                 <img class="thumbnail" src="http://natgeo.petsmart.com/content/img/leopard-gecko/leopard-gecko-fun-facts.jpg">
-                <span class="super-size">{{geckoDetail.name}}</span>
+                <span class="bold">{{geckoDetail.name}}</span>
                 <i class='fa fa-mars male' ng-if="gecko.sex == 'male'" title="male"></i>
                 <i class='fa fa-venus female' ng-if="gecko.sex == 'female'" title="female"></i>
                 <i class='fa fa-question unknown' ng-if="gecko.sex == 'unknown'" title="gender unknown"></i>
                 <span class="table-header"> ID:</span> {{geckoDetail.userId}}
-                 </div>
-                <div class="right col-1-3">
-                    <a href="/"><i class='fa fa-compress'></i></a>
-                    <i class='fa fa-trash link' ng-click="deleteGecko(geckoDetail._id,geckoDetail.name)"></i>
+            </div>
+            <div class="right col-1-3">
+                <a href="/"><i class='fa fa-compress'></i></a>
+                <i class='fa fa-edit link' ng-click="editGeckoTop=!editGeckoTop"></i>
+                <i class='fa fa-trash link' ng-click="deleteGecko(geckoDetail._id,geckoDetail.name)"></i>
+            </div>
+        </div>
+        <form ng-hide="editGeckoTop" name="editGeckoFormTop" id="topform" class="modal">
+            <div class="grid">
+                <div class="row">
+                    <div class="col-1-3">
+                        <label>Name of Gecko</label>
+                        <input type="text" ng-model="geckoDetail.name">
+                    </div>
+                    <div class="col-1-3">
+                        <label>ID</label>
+                        <input type="text" ng-model="geckoDetail.userId">
+                    </div>
+                    <div class="col-1-3">
+                        <label>Sex</label>
+                        <select ng-model="geckoDetail.sex">
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                            <option value="unknown">Unknown</option>
+                        </select>
+                    </div>
+                    <div>
+                    <button ng-click="submitEditForm()">SAVE CHANGES</button>
+                        <button ng-click="editGeckoTop='false'">CANCEL</button>
+                    </div>
                 </div>
 
-            <table>
-                <tr>
-                    </td>
-                    <td class="table-header">
-                        Morph:
-                    </td>
-                    <td>
-                        {{geckoDetail.morph}}
-                    </td>
-                    <td class="table-header">
-                        Location:
-                    </td>
-                    <td>
-                        {{geckoDetail.location}}
-                    </td>
-                    <td class="table-header">
-                        Status:
-                    </td>
-                    <td>
-                        {{geckoDetail.status}}
-                    </td>
-                    <td class="table-header">
-                        Weight:
-                    </td>
-                    <td>
-                        {{geckoDetail.currWeight}}
-                    </td>
+            </div>
+        </form>
+        <!-- TODO: Change gecko detail to look more like add new gecko form with labels above entry -->
+        <div class="grid">
+            <label>Morph</label>
+            {{geckoDetail.morph}}
+            <label>Location</label>
+            {{geckoDetail.location}}
+            <label>Status</label>
+            {{geckoDetail.status}}
+            <label>Weight</label>
+            {{geckoDetail.currWeight}} Birthdate: {{geckoDetail.birthdate | date:'mediumDate'}} Purchased: {{geckoDetail.purchaseDate | date:'mediumDate'}} Mother: {{geckoDetail.mother.name}} : {{geckoDetail.mother.userId}} Father: {{geckoDetail.father.name}} : {{geckoDetail.father.userId}}
 
-                </tr>
-                <tr>
-                    <td class="table-header">
-                        Birthdate:
-                    </td>
-                    <td>
-                        {{geckoDetail.birthdate | date:'mediumDate'}}
-                    </td>
-                    <td class="table-header">
-                        Purchased:
-                    </td>
-                    <td>
-                        {{geckoDetail.purchaseDate | date:'mediumDate'}}
-                    </td>
-                    <td class="table-header">
-                        Mother:
-                    </td>
-                    <td>
-                        {{geckoDetail.mother.name}} : {{geckoDetail.mother.userId}}
-                    </td>
-                    </td>
-                    <td class="table-header">
-                        Father:
-                    </td>
-                    <td>
-                        {{geckoDetail.father.name}} : {{geckoDetail.father.userId}}
-                    </td>
-                </tr>
-            </table>
         </div>
+
     </div>
+</div>
 </div>
