Working on making gecko details editable

--- a/public/assets/css/base/_b-elements.less
+++ b/public/assets/css/base/_b-elements.less
@@ -46,3 +46,14 @@
     font-weight: normal;
 }
 
+.link:hover {
+    cursor: pointer;
+    &:hover {
+        color: @accentColor;
+    }
+}
+
+input .inline {
+    background: pink;
+}
+
