--- a/public/assets/css/modules/_gecko.less
+++ b/public/assets/css/modules/_gecko.less
@@ -36,6 +36,7 @@
     background: white;
     margin: 10px;
     padding: 5px;
+    width: unset;
 }
 
 /* Gecko Detail */
@@ -43,7 +44,7 @@
 .gecko-detail-card {
     .card;
     padding: 10px;
-    line-height: 50px;
+
 }
 
 .gecko-detail-card .table-header {
@@ -71,7 +72,7 @@
 }
 
 #form input, #form select {
-    border-bottom: dotted 1px @evenRowColor;
+
     line-height: 20px;
 }
 
@@ -83,4 +84,8 @@
 .form-feedback {
     color: @accentColor;
     border-top: solid 1px @dividerColor;
+}
+
+.green {
+    color: @primaryColor;
 }
