--- a/public/components/GeckoTable/GeckoTableTemplate.htm
+++ b/public/components/GeckoTable/GeckoTableTemplate.htm
@@ -2,7 +2,7 @@
 <div class="gecko-card">
     <table>
         <div class="table-top">
-             <input type="text" class="search-box" placeholder="Search List of Geckos" ng-model="searchTerm">
+             <input type="text" class="search-box inline" placeholder="Search List of Geckos" ng-model="searchTerm">
         </div>
         <thead>
             <tr class="link--nohover">
