--- a/public/assets/css/base/_b-base.less
+++ b/public/assets/css/base/_b-base.less
@@ -16,7 +16,7 @@ a:hover:not(.link--nohover),
     color: @accentColor;
 }
 
-button {
+button, .button-primary {
     padding: 8px 10px;
     margin-top: 12px;
     background: @accentColor;
@@ -48,21 +48,33 @@ i {
 label,
 select,
 input {
-    display: block;
-    float: left;
-    width: 100%;
+    &:not(.inline) {
+        display: block;
+        float: left;
+        width: 100%;
+    }
 }
 
 select,
 input {
     border: 0;
     outline: none;
-    &:hover {
+    border-bottom: dotted 1px @evenRowColor;
+    font-family: "Roboto", sans-serif;
+    background: @background;
+    line-height: 20px;
+    &:not(.input--readonly):hover {
         border-bottom: solid 2px @lightPrimaryColor !important;
     }
     &:focus {
         border-bottom: solid 2px @accentColor !important;
+        background: @textColorLight;
     }
+}
+
+.input--readonly:hover,
+.input--readonly:focus {
+    border-bottom: dotted 1px @evenRowColor;
 }
 
 table {
